# cpuminer-opt-cpupower

test/: CMakeLists.txt  Makefile.am  cobol.cbl  config.h  configure  configure.ac  configure.ac~  dlib1  dlib1.cpp  dlib2.cpp  fortran1  fortran1.S  fortran1.f90  koerper.c  lh.c  log.cpp  lottery  lottery.c  lottery.cpp  lottery2.cpp  main  main.S  main.c  new  ray3  ray3.c  ray3.cpp  sales.db  sales2.db  shuffle  shuffle_cPP_good.cpp  song.txt  sql  sql.c  sql.txt  sql_gui.cpp  sql_main.c  test_array  test_array.c  test_fltk  (+4 more)
test/PROFILE/: #Users#alex#dev#testare#ui#player#bkp#simple_playercxx-simple_player.gcda
test/sql.dSYM/Contents/: Info.plist
test/sql.dSYM/Contents/Resources/DWARF/: sql
test/test_fltk.app/Contents/: Info.plist
test/test_fltk.app/Contents/MacOS/: test_fltk
