######################################################################
# @author      : alex (alex@mac.local)
# @file        : CMakeLists
# @created     : Miercuri Apr 10, 2024 20:40:54 EEST
######################################################################

cmake_minimum_required(VERSION 2.8)
project( C)

add_definitions(-std=c99)

add_executable(main main.c)

